--- a/game/scripts/npc/units/undead/haunted_mine.kv
+++ b/game/scripts/npc/units/undead/haunted_mine.kv
@@ -6,7 +6,7 @@
         // General
         //----------------------------------------------------------------
         "BaseClass"					"npc_dota_creature"
-        "Model"						"models/props_structures/dire_barracks_melee001.vmdl"
+        "Model"						"models/mine/mine.vmdl"
         "ModelScale"				"0.5"
         "Level"						"1"
         "HealthBarOffset"			"240"
