--- a/game/scripts/npc/units/undead/acolyte.kv
+++ b/game/scripts/npc/units/undead/acolyte.kv
@@ -25,8 +25,9 @@
 
 		// Abilities
         //----------------------------------------------------------------
-        "AbilityLayout"				"1"
+        "AbilityLayout"				"2"
         "Ability1"				    "acolyte_haunt_mine"
+        "Ability2"				    "undead_build_ziggurat"
 
 		"AttackDamageMin"     		"20"
 		"AttackDamageMax"     		"40"
