--- a/game/scripts/npc/units/undead/ghoul.kv
+++ b/game/scripts/npc/units/undead/ghoul.kv
@@ -44,5 +44,18 @@
 
 		"VisionDaytimeRange"    	"600"
 		"VisionNighttimeRange"    	"400"
+
+
+		"Creature"
+		{
+			"DisableClumpingBehavior"	"1"
+			"AttachWearables"
+			{
+				"Wearable1"		{	"ItemDef"		"443"		}
+				"Wearable2"		{	"ItemDef"		"444"		}
+				"Wearable3"		{	"ItemDef"		"7393"		} //Back: Blades of the Bloody Ripper - Hidden, just for swapping purposes
+				"Wearable4"		{	"ItemDef"		"7395"		} //Head: Mask of the Bloody Ripper - Hidden, just for swapping purposes
+			}
+		}
 	}
 }
