Okay we gucci. TODO: cleanup and integrate into building helper

--- a/game/scripts/npc/abilities/undead_build/undead_build_ziggurat.kv
+++ b/game/scripts/npc/abilities/undead_build/undead_build_ziggurat.kv
@@ -5,7 +5,8 @@
     //=================================================================================================================
     "undead_build_ziggurat"
     {
-        "BaseClass"             		"ability_datadriven"
+        "BaseClass"             		"ability_lua"
+        "ScriptFile"                    "abilities/builder/undead_build_ziggurat.lua"
         "AbilityTextureName"			"undead_build_crypt"
         "MaxLevel" 						"1"
 
