--- a/game/scripts/npc/units/undead/undead_crypt.kv
+++ b/game/scripts/npc/units/undead/undead_crypt.kv
@@ -44,9 +44,9 @@
         
         // Building Size
         //----------------------------------------------------------------
-        "ConstructionSize"			"6"
+        "ConstructionSize"			"3"
         "BlockPathingSize"			"4"
-        "Requires"					"Buildable Blight"
+        // "Requires"					"Buildable Blight"
         "Grid"
         {
             "Blight"
